--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -5,17 +5,9 @@
     displayBlock="true"
 >
     <Shell>
-        <App class="myAPpDemoWT">
-            <pages>
-                <Page title="{i18n>homePageTitle}">
-                    <content>
-                        <mvc:XMLView viewName="ui5.walkthrough.view.HelloPanel" />
-                    </content>
-                    <content>
-                        <mvc:XMLView viewName="ui5.walkthrough.view.InvoiceList" />
-                    </content>
-                </Page>
-            </pages>
-        </App>
+        <App
+            class="myAppDemoWT"
+            id="app" />
     </Shell>
 </mvc:View>
+
