--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -38,7 +38,7 @@
                     <ObjectAttribute
                     title="{i18n>dateTitle}"
                     text="{
-                        path: 'invoice>ShipperDate',
+                        path: 'invoice>ShippedDate',
                         type: 'Date',
                         formatOptions: {
                             style: 'long',
