--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -10,6 +10,7 @@
                 <Title text="{i18n>invoiceListTitle}" />
                 <ToolbarSpacer />
                 <SearchField
+                    id="invoiceSearchField"
                     width="50%"
                     search=".onFilterInvoices"
                 />
